Swagger erweitert
